--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^4.7.4",
     "morgan": "~1.7.0",
     "redis": "^2.6.3",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "client-sessions": "latest"
   }
 }
